services/pgadmin/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pgadmin
  namespace: services
spec:
  selector:
    matchLabels:
      app: pgadmin
  podManagementPolicy: Parallel
  updateStrategy:
   type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
      - name: pgadmin
        image: dpage/pgadmin4:8.6
        imagePullPolicy: Always
        securityContext:
           runAsUser: 0
           runAsGroup: 0
        ports:
        - containerPort: 80
          # this might make he volume mount work https://stackoverflow.com/questions/64201305/kubernetes-persistent-volume-mount-for-pgadmin
          #        volumeMounts:
          #        - mountPath: "/var/lib/pgadmin"
          #          name: pgadmin-data
            #      volumes:
            #        - name: pgadmin-data 
            #          persistentVolumeClaim:
            #            claimName: akc-services-files 
            #      affinity:
            #        podAntiAffinity:
            #         requiredDuringSchedulingIgnoredDuringExecution:
            #            - labelSelector:
            #                matchExpressions:
            #                  - key: "statefulset"
            #                    operator: In
            #                    values:
            #                    - pgadmin
            #              topologyKey: "kubernetes.io/hostname"

          #        volumeMounts:
          #          - name: pgadmin-data
          #            mountPath: /var/lib/pgadmin
          #      volumes:
          #        - name: pgadmin-data
          #          persistentVolumeClaim:
          #            claimName: akc-services-files
