services/pgadmin/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: services
spec:
  type: NodePort
  selector:
    app: pgadmin
  ports:
  - name: pgadmin-port
    port: 80
    targetPort: 80
      #nodePort: 30080
